--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        PYTHONPATH=. pytest toyrobot/test/test_*.py
+        pip install -e .
+    - name: Run unit tests with pytest
+      run: python -m pytest --import-mode=append toyrobot/tests/
     - name: Code Coverage
       uses: codecov/codecov-action@v1
