--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements_test.txt
         pip install -e .
     - name: Run unit tests with pytest
       run: python -m pytest --import-mode=append toyrobot/tests/
