--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -20,6 +20,6 @@ jobs:
         pip install -r requirements_test.txt
         pip install -e .
     - name: Run unit tests with pytest
-      run: python -m pytest --import-mode=append toyrobot/tests/
+      run: python -m pytest --import-mode=append .
     - name: Code Coverage
       uses: codecov/codecov-action@v1
